# chtracker

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  configure  configure.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: compile.yml
backups/: font.i
config-helpers/: sdl-flags.pl  sdl-path.pl
doc/: MINGW_RUNTIME_LICENSE.txt  file-format.txt  help.txt  new-file-format.txt
src/: channel.cxx  chtracker.cxx  log.cxx  onKeydown.cxx  order.cxx  screenUpdate.cxx  timer.cxx  windowsMain.cxx
src/channel/: channel.cxx
src/headers/: channel.hxx  log.hxx  main.h  order.hxx  timer.hxx  visual.h
src/log/: log.cxx
src/order/: order.cxx
src/visual/: font.charset  font.pl  visual.c
